--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
@@ -25,5 +26,3 @@
     "enzyme-adapter-react-16": "^1.1.1"
   }
 }
-
-
