--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js"
+    "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js --ignore-pattern *.test.js"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
